switch server to quarkus